--- a/theme/print.css
+++ b/theme/print.css
@@ -13,11 +13,6 @@ html {
 }
 
 
-
-
-
-
-
 /* underline all links */
 a:link, a:visited {
 	text-decoration: underline !important;
@@ -29,21 +24,21 @@ a:link, a:visited {
 	text-decoration: none !important;
 }
 
-/* CSS2 selector to add visible href after links
-#content a:link:after,
-#content a:visited:after
-{
-content: " (" attr(href) ") ";
+/* CSS2 selector to add visible href after links*/
+/*#content-region a:link:after,
+#content-region a:visited:after {
+content: " ("  attr(href) ") ";
 font-size: 0.8em;
 font-weight: normal;
-}
-*/
+}*/
+
 
 /* Turn off any background colors or images */
 body,
 #page, #page-inner,
 #main, #main-inner,
-#content, #content-inner {
+#content, #content-inner,
+article {
 	color: #000;
 	background-color: transparent !important;
 	background-image: none !important;
@@ -55,7 +50,8 @@ body,
 #footer-message-wrapper, #content-tabs, #breadcrumbs, 
 #comments, #admin-menu, .fusion-edit, div.tabs, .links, 
 .taxonomy,.book-navigation, .forum-topic-navigation, 
-.pager, .feed-icons, .views-admin-links {
+.pager, .feed-icons, .views-admin-links, .views-field-edit-node, 
+.views-field-edit-node a, .views-ui-edit a, .contextual-links-wrapper  {
 	visibility: hidden;
 	display: none;
 }
@@ -76,11 +72,28 @@ body,
 	}
 	
 	#send-to-printer input {
-		background:url('../design_packs/eesc/images/button-bg.png') repeat-x scroll 50% 0 #9E9E9E;
-		border:3px solid #E9E9E9;
-		color:#FFFFFF;
+		-moz-outline-radius: 4px 4px 4px 4px;
+    background-color: transparent;
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-size: 100% 200%;
+    border: 1px solid #000;
+    border-radius: 4px 4px 4px 4px;
+    color: #666;
+    cursor: pointer;
+    font-size: 0.75em;
+    font-weight: 700;
+    margin: 3px 10px 3px 0;
+    outline: 1px solid #9BABB0;
+    padding: 2px 6px;
 	}
 }
+
+	#send-to-printer input:hover {
+		background-color: #ccc;
+		color: #fff;
+	}
+
 
 @media print {
 	#send-to-printer {
@@ -99,20 +112,35 @@ body {
 	font-family: "Georgia","Times New Roman",serif;
 	font-size: 12pt;
 }
-.print-friendly-body .views-field-title {
-	font-size: 23px;
-	padding-top:25px;
+
+.print-heading {
+	font-weight: bold;
+	font-size: 14pt;
 }
+
+.view-article-subpages .views-field-title {
+	font-size: 12pt;
+	line-height: 1.5;
+}
+
+.view-article-subpages .views-field-title a {
+	color: 000;
+}
+
+.print-friendly-body .views-field-title, {
+	font-size: 12pt;
+}
+
+.print-friendly-body h2 {
+	font-size: 18px;
+}
+
 .print-friendly-body h3 {
 	font-size: 15px;
 }
 
-
-
-/* -- Events Table -- */
-div.events-table table.views-table caption span.date-display-single {
-	font-size: 1.25em;
-	font-weight: bold;
+hr.bottom-bar {
+	margin-top: 50px;
 }
 
 #send-to-printer {
@@ -135,3 +163,36 @@ div.events-table table.views-table caption span.date-display-single {
 	font-size: 23px;
 	font-weight: normal;
 	}
+
+.view-related-images {
+    background-color: #F1F1F1;
+    border: 1px solid #C8C8C8;
+    float: right;
+    padding: 5px;
+    width: 210px;
+}
+
+.views-field-field-image-description {
+	font-size: 90%;
+	font-weight: normal;
+}
+
+div.caption .c-name {
+	font-weight: bold;
+}
+
+div span.detail-3-4 {
+	font-style: italic;
+}
+
+div .c-description {
+	font-size: 90%;
+	font-weight: normal;
+}
+
+div.views-field-field-photo-copyright .copyright,
+div.views-field-field-photo-copyright .copyright a {
+	font-size: 80%;
+	line-height: 1;
+	padding-top: 0;
+}
